--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -279,7 +279,7 @@ html body #main-content main #login-data #password #togglePW {
   width: 12px;
   height: auto;
   cursor: pointer;
-  background: url("/src/img/icons/eye.png");
+  background: url("/src/img/icons/light/eye.png");
 }
 html body #main-content main #login-data #password #toggle {
   display: none;
