--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -258,7 +258,7 @@ html {
               width: 12px;
               height: auto;
               cursor: pointer;
-              background: url('/src/img/icons/eye.png');
+              background: url('/src/img/icons/light/eye.png');
             }
             #toggle {
               display: none;
