--- a/REWORK/src/stylesheet/index-ui/index.scss
+++ b/REWORK/src/stylesheet/index-ui/index.scss
@@ -1,86 +1,3 @@
-.light {
-    --background-color: #F3F3F3;
-    --main-color: #F9F9F9;
-    --border-color: #DFDFDF;
-
-    --text-color: #000000;
-    --text-note-color: #001224;
-
-    // Input
-    --input-bg-color: #fefefefe;
-    --input-border-color: #ebebeb;
-    --input-border-bot-color: #757575;
-    --input-bg-hover-color: #ffffff;
-
-    // Button
-    --text-main-button: #FFFFFF;
-    --bg-main-button: #005FB8;
-    --bg-after-main-button: linear-gradient(180deg, #0069B8 90%, #013681 100%);
-    --bg-hover-main-button: #016dd1;
-    --bg-active-main-button: #0076e4;
-
-    --text-sec-button: #000000;
-    --bg-sec-button: rgb(254, 254, 254);
-    --bg-after-sec-button: linear-gradient(180deg, #e9e9e9 90%, #d3d3d3 100%);
-    --bg-hover-sec-button: rgb(247, 247, 247);
-    --bg-active-sec-button: rgb(238, 238, 238);
-
-    --active-color: #cecece;
-  
-    --img-size: 20px;
-    --font-size: 14px;
-
-    --window-control-hover: rgb(213, 219, 223);
-    --window-close-hover: rgb(255, 89, 89);
-
-    --mouse-color: linear-gradient(90deg, rgb(250, 112, 154)28%, rgb(254, 225, 64) 100%);
-  
-    ::selection {
-      background: rgb(161, 200, 250);
-    }
-}
-
-.dark {
-    --background-color: #1C1C1C;
-    --main-color: #202020;
-    --border-color: #303030;
-    --active-color: rgb(53, 53, 53);
-    
-    --text-color: #FFFFFF;
-    --text-note-color: #9facbb;
-
-    // Input
-    --input-bg-color: #fefefefe;
-    --input-border-color: #ebebeb;
-    --input-border-bot-color: #757575;
-    --input-bg-hover-color: #ffffff;
-
-    // Button
-    --text-main-button: #000000;
-    --bg-main-button: #60CDFF;
-    --bg-after-main-button: linear-gradient(180deg, #0069B8 90%, #013681 100%);
-    --bg-hover-main-button: #016dd1;
-    --bg-active-main-button: #0076e4;
-
-    --text-sec-button: #FFFFFF;
-    --bg-sec-button: #2a2a2a;
-    --bg-after-sec-button: linear-gradient(180deg, #e9e9e9 90%, #d3d3d3 100%);
-    --bg-hover-sec-button: rgb(247, 247, 247);
-    --bg-active-sec-button: rgb(238, 238, 238);
-  
-    --img-size: 20px;
-    --font-size: 14px;
-  
-    --window-control-hover: rgb(64, 67, 70);
-    --window-close-hover: rgb(194, 43, 43);
-    
-    --mouse-color: linear-gradient(90deg, rgba(196,245,201, 0.6)28%, rgba(196,232,245, 0.6) 100%);
-
-    ::selection {
-      background: rgb(161, 200, 250);
-    }
-}
-
 html {
     width: 100%;
     height: 100%;
@@ -175,9 +92,9 @@ html {
                 transition: .2s;
             }
         }
-        .help {
-            width: 12px;
-            height: 12px;
+        .info {
+            width: 11px;
+            height: 11px;
             cursor: pointer;
         }
         .hidden {
@@ -190,7 +107,9 @@ html {
                 top: 0;
                 left: 0;
                 width: 100%;         
-                height: 35px;     
+                height: 31px;     
+                backdrop-filter: blur(100px);
+                z-index: 3;
                 -ms-overflow-style: scrollbar;
                 -webkit-app-region: drag;
                 #window-title {
@@ -237,12 +156,15 @@ html {
         nav {
             #side-bar {
                 position: absolute;
-                top: 35px;
+                padding-top: 4px;
+                top: 31px;
                 left: 0;
                 width: 320px;
                 height: 100vh;
                 transition: .2s;
                 font-size: var(--font-size);
+                backdrop-filter: blur(100px);
+                z-index: 3;
                 #active {
                     background-color: var(--border-color);
                     &:active {
@@ -271,7 +193,7 @@ html {
                     padding-bottom: 10px;
                     transition: .2s;
                     &:hover {
-                        background-color: var(--border-color);
+                        background-color: var(--hover-color);
                         transition: .2s;
                     }
                     &:active {
