--- a/REWORK/src/stylesheet/color.css
+++ b/REWORK/src/stylesheet/color.css
@@ -8,31 +8,50 @@
     --text-color: #000000;
     --text-note-color: #001224;
 
-    --input-bg-color: #fefefefe;
+    /* Input */
+    --input-color: #636363;
+    --input-bg-color: #fdfdfd;
     --input-border-color: #ebebeb;
-    --input-border-bot-color: #757575;
-    --input-bg-hover-color: #ffffff;
+    --input-border-bot-color: #8b8b8b;
 
+    --input-hover-color: #626262;
+    --input-bg-hover-color: #f9f9f9;
+    --input-border-bot-hover-color: #8b8b8b;
+
+    --input-bg-active-color: #ffffff;
+    --input-border-active-color: #ebebeb;
+    --input-border-bot-active-color: var(--bg-main-button);
+    
+    --input-cross: #f1f1f1;
+
+    /* Button */
     --text-main-button: #FFFFFF;
     --bg-main-button: #005FB8;
     --bg-after-main-button: linear-gradient(180deg, #0069B8 90%, #013681 100%);
     --bg-hover-main-button: #016dd1;
     --bg-active-main-button: #0076e4;
+    --active-main-button-color: #d8e7f5;
 
-    --text-sec-button: #000000;
+    --text-sec-button: var(--text-color);
     --bg-sec-button: rgb(254, 254, 254);
     --bg-after-sec-button: linear-gradient(180deg, #e9e9e9 90%, #d3d3d3 100%);
     --bg-hover-sec-button: rgb(247, 247, 247);
     --bg-active-sec-button: rgb(238, 238, 238);
+    --active-sec-button-color: var(--text-color);
 
+    --bg-border-button: #dbdbdb;
   
     --img-size: 20px;
     --font-size: 14px;
 
-    --window-control-hover: rgb(213, 219, 223);
+    --window-control-hover: rgba(168, 168, 168, 0.35);
     --window-close-hover: rgb(255, 89, 89);
 
     --mouse-color: linear-gradient(90deg, rgb(250, 112, 154)28%, rgb(254, 225, 64) 100%);
+
+    --error-banner-bg: #fde7e9e7;
+    --error-banner-icon: #C42B1C;
+    --error-banner-button: #fffbfcd5;
 }
 
 .light ::selection {
@@ -49,22 +68,38 @@
     --text-color: #FFFFFF;
     --text-note-color: #9facbb;
 
-    --input-bg-color: #fefefefe;
-    --input-border-color: #ebebeb;
-    --input-border-bot-color: #757575;
-    --input-bg-hover-color: #ffffff;
+    --input-color: #d2d2d2;
+    --input-bg-color: #292929;
+    --input-border-color: #2e2e2e;
+    --input-border-bot-color: #989898;
 
+    /* Input */
+    --input-hover-color: var(--input-color);
+    --input-bg-hover-color: #2f2f2f;
+    --input-border-bot-hover-color: #979797;
+
+    --input-bg-active-color: #201c1c;
+    --input-border-active-color: #2c2c2c;
+    --input-border-bot-active-color: #60cdff;
+
+    --input-cross: #333435;
+
+    /* Button */
     --text-main-button: #000000;
     --bg-main-button: #60CDFF;
-    --bg-after-main-button: linear-gradient(180deg, #0069B8 90%, #013681 100%);
-    --bg-hover-main-button: #016dd1;
-    --bg-active-main-button: #0076e4;
+    --bg-after-main-button: linear-gradient(180deg, #6cd1ff 70%, #56b5e0 100%);
+    --bg-hover-main-button: #59bce8;
+    --bg-active-main-button: #53aad2;
+    --active-main-button-color: #192e3a;
 
-    --text-sec-button: #FFFFFF;
+    --text-sec-button: var(--text-color);
     --bg-sec-button: #2a2a2a;
-    --bg-after-sec-button: linear-gradient(180deg, #e9e9e9 90%, #d3d3d3 100%);
-    --bg-hover-sec-button: rgb(247, 247, 247);
-    --bg-active-sec-button: rgb(238, 238, 238);
+    --bg-after-sec-button: linear-gradient(180deg, #313131 70%, #2b2b2b 100%);
+    --bg-hover-sec-button: #2f2f2f;
+    --bg-active-sec-button: #2e2e2e;
+    --active-sec-button-color: #d0d0d0;
+
+    --bg-border-button: #2c2c2c;
   
     --img-size: 20px;
     --font-size: 14px;
@@ -73,8 +108,12 @@
     --window-close-hover: rgb(194, 43, 43);
     
     --mouse-color: linear-gradient(90deg, rgba(164, 223, 170, 0.6)28%, rgba(107, 193, 224, 0.6) 100%);
+    
+    --error-banner-bg: #442726bd;
+    --error-banner-icon: #FF99A4;
+    --error-banner-button: #573434bd;
 }
 
 .dark ::selection {
-    background: rgb(161, 200, 250);
+    background: rgb(79, 105, 139);
 }
