--- a/REWORK/src/stylesheet/index-ui/index.scss
+++ b/REWORK/src/stylesheet/index-ui/index.scss
@@ -70,7 +70,8 @@ html {
         }
         .medium-form, .big-form {
             height: 30px;
-            padding-left: 5px;
+            padding-left: 7px;
+            color: var(--input-color);
             font-size: var(--small-text);
             background-color: var(--input-bg-color);
             border: none;
@@ -80,21 +81,26 @@ html {
             font-size: 14px;
             transition: .2s;
             &:hover {
+                color: var(--input-hover-color);
                 background-color: var(--input-bg-hover-color);
-                border-bottom: 1px solid var(--bg-main-button);
+                border: 1px solid var(--input-border-color);
+                border-bottom: 1px solid var(--input-border-bot-hover-color);
                 transition: .2s;
             }
-            &:focus {
+            &:active, &:focus {
                 outline: none;
-                height: 28.8px;
-                background-color: var(--input-bg-hover-color);
-                border-bottom: 2px solid var(--bg-main-button);
+                height: 28px;
+                padding-top: 2px;
+                background-color: var(--input-bg-active-color);
+                border: 1px solid var(--input-border-active-color);
+                border-bottom: 2px solid var(--input-border-bot-active-color);
                 transition: .2s;
             }
         }
         .info {
             width: 11px;
             height: 11px;
+            margin-left: 3px;
             cursor: pointer;
         }
         .hidden {
@@ -272,8 +278,39 @@ html {
                     width: 469px;
                     height: 332px;
                     #post-url {
-                        input {
+                        #url-input {
                             margin-top: -8px;
+                        }
+                        #url-input:placeholder-shown + #clearButton {
+                            opacity: 0;
+                            pointer-events: none;
+                        }
+                        #clearButton {
+                            position: absolute;
+                            display: block;
+                            border: none;
+                            outline: none;
+                            background: none;
+                            margin-top: -29.5px;
+                            margin-left: 436px;
+                            width: 28px;
+                            height: 24px;
+                            border-radius: 5px;
+                            cursor: pointer;
+                            transition: .2s;
+                            &:hover {
+                                background-color: var(--input-cross);
+                                transition: .2s;
+                            }
+                            &:active {
+                                opacity: .8;
+                                transition: .2s;
+                            }
+                            img {
+                                margin-top: 3px;
+                                width: 12px;
+                                height: 12px;
+                            }
                         }
                     }
                     #login-data {
@@ -283,18 +320,36 @@ html {
                             margin-top: -8px;
                         }
                         #password {
-                            margin-left: 51px;
+                            margin-left: 49px;
+                            #password-form:placeholder-shown + #togglePW {
+                                opacity: 0;
+                                pointer-events: none;
+                            }
                             #togglePW {
                                 position: absolute;
-                                margin-top: 3px;
-                                right: 100px;
-                                width: 12px;
-                                height: auto;
+                                display: block;
+                                border: none;
+                                outline: none;
+                                background: none;
+                                margin-top: -29.5px;
+                                margin-left: 176px;
+                                width: 28px;
+                                height: 24px;
+                                border-radius: 5px;
                                 cursor: pointer;
-                                opacity: .7;
-                            }
-                            #toggle {
-                                display: none;
+                                transition: .2s;
+                                &:hover {
+                                    background-color: var(--input-cross);
+                                    transition: .2s;
+                                }
+                                &:active {
+                                    opacity: .8;
+                                    transition: .2s;
+                                }
+                                #togglePwImage {
+                                    margin-top: 2px;
+                                    margin-left: 4px;
+                                }
                             }
                         }
                     }
@@ -345,7 +400,7 @@ html {
                                     cursor: pointer;
                                     color: var(--text-sec-button);
                                     background: var(--bg-sec-button);
-                                    border: 1px solid #e9e9e9;          //////////////////////////
+                                    border: 1px solid var(--bg-border-button);
                                     border-radius: 5px;
                                     transition: .2s;
                                     &:hover {
@@ -353,6 +408,7 @@ html {
                                         transition: .2s;
                                     }
                                     &:active {
+                                        color: var(--active-sec-button-color);
                                         background-color: var(--bg-active-sec-button);
                                         transition: .2s;
                                     }
@@ -393,6 +449,7 @@ html {
                                 transition: .2s;
                             }
                             &:active {
+                                color: var(--active-main-button-color);
                                 background-color: var(--bg-active-main-button);
                                 transition: .2s;
                             }
@@ -420,10 +477,86 @@ html {
                                 transition: .2s;
                             }
                             &:active {
+                                color: var(--active-sec-button-color);
                                 background-color: var(--bg-active-sec-button);
                                 transition: .2s;
                             }
                         }
+                    }
+                }
+            }
+        }
+        #error-banner {
+            display: none;
+            position: absolute;
+            z-index: 5;
+            top: 60px;
+            left: calc(50vw - 230px);
+            width: 600px;
+            height: 46px;
+            font-size: 14px;
+            border-radius: 3px;
+            background-color: var(--error-banner-bg);
+            backdrop-filter: blur(10px);
+            #error-content {
+                display: flex;
+                margin-top: 13px;
+                margin-left: 15px;
+                width: 570px;
+                #error-icon {
+                    margin-top: 3px;
+                    width: 14px;
+                    height: 14px;
+                    border-radius: 50%;
+                    background-color: var(--error-banner-icon);
+                    img {
+                        width: 8px;
+                        height: 8px;
+                        margin-bottom: 4px;
+                        margin-left: 3px;
+                    }
+                }
+                #error-title {
+                    margin-left: 13px;
+                    font-weight: 500;
+                }
+                #error-info {
+                    margin-left: 12px;
+                }
+                #error-hide {
+                    display: none;
+                    position: absolute;
+                    top: 8px;
+                    right: 50px;
+                    width: 100px;
+                    height: 30px;
+                    border: none;
+                    outline: none;
+                    background: none;
+                    border-radius: 2px;
+                    color: var(--text-color);
+                    background-color: var(--error-banner-button);
+                    cursor: pointer;
+                    transition: .2s;
+                    &:hover {
+                        opacity: .9;
+                        transition: .2s;
+                    }
+                    &:active {
+                        opacity: .75;
+                        transition: .2s;
+                    }
+                }
+                #error-close {
+                    position: absolute;
+                    top: 15px;
+                    right: 15px;
+                    width: 16px;
+                    height: 16px;
+                    cursor: pointer;
+                    img {
+                        width: 14px;
+                        height: 14px;
                     }
                 }
             }
